[metadata]
description-file = README.rst

[tool:pytest]
DJANGO_SETTINGS_MODULE = childsafe.settings
python_files = tests.py test_*.py *_tests.py
addopts = --cov --cov-report term-missing --pep8 --maxfail=2
norecursedirs =
    .git
    .tox
    .env
    .virtualenvs
    .virtualenv
    venv
    dist
    build
    south_migrations
    migrations
    example
pep8maxlinelength = 80
pep8ignore = 
    E402    # module level import not at top of file
    **/migrations/** ALL
